information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.19.1
====================
[2873106] Export XML warnings now consistent with Export Text's.
[2872829] Duplicate Entry now copies password policy as well.
[2870059] When an entry is highlighted during Find, the Toolbar and menu
items now reflect its contents.
[2868278] Minimize via the system menu, SystemTray menu and system control
box button now locks the database if the preference 'Lock on Minimize' is
set.
[2868244] Change font dialogs now work again.
[] Now no longer complains about WTS service in Windows systems earlier
than Windows XP.
[] Filters containing tests on the entry type now exported to XML
correctly.
[] Validate of Password History (-v command line flag) now correctly
removes history fields with invalid dates or empty old password fields.
[] Fix match test 'does not begin with' - used in filters and restricting
entries exported to Text or XML.

New Features for 3.19.1
=======================
[2881604] Allow edit of base entry of a shortcut via the Edit menu and/or
by right-clicking on a shortcut entry.
[2872273] Improve Import Text 'Line skipped' message.
[2826509] Can now update passwords of existing entries via Import Text or XML.
For Text import, the 'Group/Title', 'Username' and 'Password' fields are required.
Fox XML import, the Title and Password elements are required. If the Group and
Username elements are missing, they are assumed to be empty.  All other fields or 
elements can be present but will be ignored.
[] Add highlighting of added/changed and deleted records.  The latter can
only be viewed via a filter or the supplied menu item (under View menu).

Changes to Existing Features in 3.19.1
======================================
[2880663] 'Browse to' special fields (currently: [alt], {alt}, [ssh], [autotype]